# agent-base-core

./: .dockerignore  .env.server.example  .gitignore  DOC.md  Dockerfile  FOR_CURSOR.md  FOR_FINAL.md  FOR_GROK.md  Makefile  README.md  SISTEM_DOKUMANI.md  SISTEM_MIMARISI.md  SON_DEGISIKLIKLER_VE_GENEL_SISTEM.md  check.html  docker-compose.prod.yml  docker-compose.yml  sonuc.json  test.py  test2.py  ÖZET.md
agent-base-api/: .dockerignore  .gitignore  ARCHITECTURE_CLEANUP_PLAN.md  ARCHITECTURE_EVOLUTION_PLAN.md  Dockerfile  FRONTEND_REBUILD_PLAN.md  Makefile  Notes.txt  PROJECT_AUDIT.md  SON_DEGISIKLIKLER_VE_GENEL_SISTEM.md  SYSTEM_REVIEW_FOR_EXTERNAL_AUDIT.md  action_engine.py  agent_registry.py  agent_runtime.py  ai_planner.py  ai_synthesizer.py  approval_service.py  auth_service.py  automation_log_service.py  autonomous_planner.py  benchmark_chat.py  brightdata.py  business_activity_simulator.py  business_chat.py  business_intelligence.py  business_query_router.py  business_retrieval_service.py  business_state.py  campaign_intent.py  campaign_service.py  conflict_resolver.py  context_compressor.py  conversation_memory.py  conversational_rule_edit.py  crewai_worker.py  cross_event_reasoner.py  customer_interaction_service.py  db.py  developer-tools.py  docker-compose.yml  (+56 more)
agent-base-api/alembic/: env.py
agent-base-api/app/: main.py
agent-base-api/config/: settings.yaml
agent-base-api/langgraph_engine/: nodes.py  runtime.py  state.py
agent-base-api/scripts/: cleanup_legacy_data.py
agent-base-api/tests/: test_coreference.py  test_misfire_regression.py  (+2 more)
(+195 files in other folders)
